[tool.poetry]
name = "dbt-bigquery"
version = "0.1.0"
description = "dbt workshop repo"
authors = ["Bruno Silva <bruno.ogs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
sqlfluff = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
